# Mir

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  RenderToTexture.cbp.save  RenderToTexture.layout.save  readme.md
source/: CMakeLists.txt  main.c
source/ai/: CMakeLists.txt  ai.c  ai.c.save  ai.h
source/graphics/: CMakeLists.txt  camera.c  camera.h  font.c  font.h  graphics.c  graphics.h  shaders.c  shaders.h  texture_map.h  textures.c  textures.h  vertices.h
source/gui/: CMakeLists.txt  button.c  button.h  gui.c  gui.h  label.c  label.h
source/kernel/: CMakeLists.txt  error_handler.c  error_handler.h  kernel.c  kernel.h  kernel_t.h  state.c  state.h  window_events.c  window_events.h
source/math/: CMakeLists.txt  matrix.c  matrix.h  mrand.c  mrand.h  point.c  point.h
source/mir/: CMakeLists.txt  actor.c  actor.h  mir.c  mir.h  mir_queue.c  mir_queue.h  team.c  team.h  tile.c  tile.c.save  tile.h  unit.c  unit.c.save  unit.h  unit.h.save  unit_search_path.c  unit_search_path.h
source/player/: CMakeLists.txt  player.c  player.h
source/shaders/: 3slices.frag  3slices.vert  9slices.frag  9slices.vert  CMakeLists.txt  base.frag  base.vert  main.frag  main.vert  point.frag  point.vert  text.frag  text.vert  texture_map.frag  texture_map.vert  texture_map_ex.frag  texture_map_ex.vert  texture_map_solid.frag  texture_map_solid.vert
source/utils/: CMakeLists.txt  utils.c  utils.h
